<resources>
    <string name="app_name">Smart Glasses ChatGPT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="API_key_insert">OpenAI api key:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Save Settings</string>
    <string name="add_prompt">Add Prompt</string>
    <string name="hint">Enter your api key here</string>
    <string name="prompt_hint">Enter your new prompt here</string>
    <string name="send_message_automatically_after_i_finish_speaking">Send message automatically after I finish speaking</string>
    <string name="send_message_when_i_say_send">Send message when I say \'send message\'</string>
    <string name="message_sending_method">Message sending method</string>
    <string name="system_prompt">System prompt:</string>
    <string name="enter_your_system_prompt_here">Enter your system prompt here</string>
    <string name="app_settings">App Settings</string>
    <string name="create_prompt">Create a New Prompt:</string>
    <string name="prompt_list">Prompt List</string>
    <string name="ok">OK</string>
    <string name="enter_prompt_title">Enter prompt title</string>
    <string name="enter_prompt_description">Enter prompt description</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="select_prompt">Select Prompt</string>
    <string name="description">Description</string>
    <string name="edit_prompt">Edit prompt</string>
</resources>